fix navbar padding on mobile view

--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -43,3 +43,19 @@
         transform: rotate(360deg);
     }
 }
+
+
+/*** Responsive mobile layout ***/
+@media only screen and (max-width:600px) {
+    .navbar-container{
+        display: flex;
+        position: sticky;
+        top:0;
+        z-index: 50;
+        background-color: var(--nav-backdround);
+        color:var(--textColor);
+        align-items: center;
+        padding: 0rem .1rem;
+        transition: box-shadow .3s ease-in-out;
+    }
+}
